# valueinvesting

./: ENGINEERING_SPEC.md  README.md  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
app/services/: dedup.py  extraction.py  pipeline.py  reference_sources.py  scoring.py  substack.py
data/: reference_sources.txt  substack_sources.txt
scripts/: bootstrap_and_demo.sh  run_local.sh
tests/: test_api.py  test_reference_sources.py  test_substack_utils.py
